--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -32,5 +32,14 @@ body {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+      @media screen and (max-width: 767px) {
+		padding-top: 60px;
+    padding-bottom: 60px;
+	}
+
+	@media screen and (max-width: 1199px) {
+		padding-top: 60px;
+    padding-bottom: 60px;
+	}
 }
 
