--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,6 +1,9 @@
-.section{
-  padding-top: 94px;
-  padding-bottom: 94px;
+.section-features{
+  @media screen and (max-width: 767px) {
+  padding-bottom: 60px;
+  padding-top: 60px;
+  }
+  
 }
 
 .features {
@@ -9,6 +12,7 @@
       display: flex;
       flex-direction: column;
       margin-right: 0;
+      padding-top: 0px;
 
     }
     @media screen and (min-width: 768px) {
