--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -372,13 +372,13 @@
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   background-color: #2f303a;
-  height: 252px;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  height: auto;
+
 }
 
 .footer-container{
   display: flex;
+  flex-wrap: wrap;
   align-items: baseline;
 }
 
@@ -405,7 +405,8 @@
 }
 
 .footer__addresses{
-  margin-right: 85px;
+  margin-left: 76px;
+  margin-bottom: 60px;
 }
 
 .contact__item {
@@ -451,7 +452,7 @@
 }
 
 .footer-social-part{
-  margin-right: 93px;
+  margin-left: 165px;
 }
 
 .footer-social__title{
@@ -520,8 +521,13 @@
   text-align: center;
 }
 
+.footer-subscribe {
+  margin-left: 166px;
+}
+
 .subscribe__form{
   display: flex;
+  flex-direction: column;
 }
 
 .subscribe__input-text{
