--- a/sass/layout/_hero-upper-part.scss
+++ b/sass/layout/_hero-upper-part.scss
@@ -16,6 +16,7 @@
   }
 
     @media screen and (max-width: 767px) {
+      width: 100%;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero_images/hero/mobile/header-background-mobile.jpg);
       @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero_images/hero/mobile/header-background-mobile@2x.jpg);
@@ -23,6 +24,7 @@
   }
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: 100%;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero_images/hero/tablet/header-background-tablet.jpg);
       @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero_images/hero/tablet/header-background-tablet@2x.jpg);
@@ -41,7 +43,7 @@
   color: var(--main-title-color);
   margin: 0 auto 30px;
       @media screen and (max-width: 767px) {
-      font-size: 24px;
+      font-size: 26px;
       line-height: 1.62;
       height: 100%;
       width: auto;
