--- a/sass/layout/_portfolio-table.scss
+++ b/sass/layout/_portfolio-table.scss
@@ -1,36 +1,57 @@
 .portfolio {
   display: flex;
   flex-wrap: wrap;
+
+    @media screen and (max-width: 767px) {
+    justify-content: center;
+    }
+
+    @media screen and (min-width: 768px) and (max-width:1199px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      }
 }
 
 .portfolio__item {
-  &:not(:nth-child(3n)) {
+  @media screen and (min-width: 1200px) {
+      &:not(:nth-child(3n)) {
   margin-right: 30px;
   }
   &:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
   }
-    @media screen and (max-width: 767px) and (max-width: 767px) {
-		width: 450px;
-	}
-
-	@media screen and (min-width: 768px) and (max-width: 1199px) {
-	margin-left: auto;
-		flex-basis: calc((100% - 60px) / 2);
-	}
-
-	@media screen and (min-width: 1200px) {
-		flex-basis: calc((100% - 90px) / 3);
-	}
+  }
+  
+  @media screen and (max-width: 767px) {
+  margin: auto;
+  margin-bottom: 30px;
+  &:last-child {
+    margin-bottom: 0;
+  }
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: calc(100% / 2 - 30px);
+    &:not(:nth-child(2n)) {
+  margin-right: 30px;
+  }
+  &:not(:nth-last-child(-n + 2)) {
+  margin-bottom: 30px;
+  }
+  
+}
 }
 
-.portfolio__box{
+.portfolio__box {
   display: inline-block;
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: var(--timing-function);
     &:hover .portfolio__tumb ,
-    &:focus-within .portfolio__tumb{
+    &:focus-within .portfolio__tumb {
     box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.12), 
     0px 4px 4px rgba(0, 0, 0, 0.06), 
     1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -58,10 +79,14 @@
   top: 0;
   left: 0;
   position: absolute;
-  transform: translateY(101%);
+  transform: translateY(105%);
   transition: transform;
   transition-duration: 250ms;
   transition-timing-function: var(--timing-function);
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: auto;
+    }
+  
 }
 
 .portfolio__description {
@@ -85,15 +110,4 @@
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--portfolio-examples-text-color);
-  @media screen and (min-width: 480px) {
-		padding: 77px 24px;
-	}
-
-	@media screen and (min-width: 768px) {
-		padding: 49px 24px;
-	}
-
-	@media screen and (min-width: 1200px) {
-		padding: 63px 24px;
-	}
-}
+  }
