--- a/sass/layout/_regular-clients.scss
+++ b/sass/layout/_regular-clients.scss
@@ -132,7 +132,7 @@
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
@@ -152,12 +152,18 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin: 15px;
-  width: calc(100% / 3 - 30px);
+  width: calc(100% / 3 - 15px);
   border: 1px solid #AFB1B8;
   border-radius: 4%;
-    &:last-child{
-    margin-right: 0;
+  margin-bottom: 30px;
+    &:nth-child(4n) {
+      margin-bottom: 0px;
+    }
+    &:nth-child(5n) {
+      margin-bottom: 0px;
+    }
+    &:nth-child(6n) {
+      margin-bottom: 0px;
     }
 
 }
@@ -190,7 +196,7 @@
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
@@ -210,14 +216,16 @@
     display: flex;
   flex-direction: row;
   justify-content: space-around;
-  width: calc(100% / 2 - 30px);
+  width: calc(100% / 2 - 15px);
     border: 1px solid #AFB1B8;
   border-radius: 4%;
   margin-bottom: 30px;
-    &:last-child{
-    margin-right: 0;
+    &:nth-child(5n) {
+      margin-bottom: 0px;
     }
-
+    &:nth-child(6n) {
+      margin-bottom: 0px;
+    }
 }
 
 .clients__link{
