--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,5 +1,7 @@
 .section--other-background {
   background-color: #f5f4fa;
+  padding-bottom: 60px;
+  padding-top: 60px;
 }
 
 .team {
@@ -7,12 +9,13 @@
 	padding-right: 15px;
 	margin-right: auto;
 	margin-left: auto;
-  @media screen and (min-width: 480px) {
-		width: 480px;
+  @media screen and (max-width: 767px) {
+		width: auto;
+    
 	}
 
 	@media screen and (min-width: 768px) {
-		width: 768px;
+		width: auto;
 	}
 
 	@media screen and (min-width: 1200px) {
@@ -20,7 +23,7 @@
 	}
 }
 
-.section__title {
+.section__title--team {
   font-weight: bold;
   font-size: 36px;
   line-height: 1.16;
@@ -28,6 +31,11 @@
   letter-spacing: 0.03em;
   margin-bottom: 50px;
   color: var(--secondary-title-color);
+  @media screen and (max-width: 767px){
+    font-size: 28px;
+    line-height: 1.17;
+    margin-bottom: 30px;
+  }
 }
 
 .team__list {
@@ -64,15 +72,29 @@
 		}
 	}
 
-	@media screen and (min-width: 480px) {
-		height: 622px;
-		width: 450px;
+	@media screen and (max-width: 767px) {
+		margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 30px;
+    margin-top: 0;
+    &:last-child {
+      margin-bottom: 0px;
+    }
 	}
 
 	@media screen and (min-width: 768px) {
-		height: 536px;
-		width: 354px;
-		margin: 15px;
+		height: auto;
+		width: auto;
+		margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 30px;
+    margin-top: 0;
+    &:nth-child(3n) {
+      margin-bottom: 0px;
+    }
+    &:nth-child(4n) {
+      margin-bottom: 0px;
+    }
 	}
 	@media screen and (min-width: 1200px) {
 		width: 270px;
@@ -83,6 +105,12 @@
 .team__box{
   text-align: center;
   padding: 30px 32px 30px 32px;
+    @media screen and (max-width:767px){
+    padding-bottom: 16px;
+  }
+    @media screen and (min-width:768px){
+    padding-bottom: 16px;
+  }
 }
 
 .team__title {
