--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -372,8 +372,6 @@
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   background-color: #2f303a;
-  height: auto;
-
 }
 
 .footer-container{
@@ -391,6 +389,7 @@
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #2196f3;
+  margin-top: 60px;
   margin-bottom: 20px;
 }
 
