--- a/sass/layout/_portfolio-navigation.scss
+++ b/sass/layout/_portfolio-navigation.scss
@@ -6,6 +6,7 @@
     @media screen and (max-width: 767px) {
 		flex-wrap: wrap;
 		justify-content: flex-start;
+		margin-top: -15px;
 	}
 
 	@media screen and (min-width: 768px) {
