--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -4,6 +4,9 @@
   padding-top: 60px;
   }
   
+  @media screen and (min-width: 1200px) {
+  height: auto;
+  }
 }
 
 .features {
@@ -15,30 +18,30 @@
       padding-top: 0px;
 
     }
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
 		display: flex;
 		flex-wrap: wrap;
-		margin: -15px;
 		margin-bottom: 0;
 	}
 	@media screen and (min-width: 1200px) {
 		display: flex;
 		justify-content: center;
+  
 	}
 }
 
 .features__item{
+  
 	@media screen and (max-width: 767px) {
 		&:not(:last-child) {
 			margin-bottom: 30px;
 		}
 	}
 	@media screen and (min-width: 768px) and (max-width: 1199px) {
-    width: 354px;
-		margin: 15px;
+    flex-basis: ((100% - 60px) / 2);
 	}
 	@media screen and (min-width: 1200px) {
-		width: 270px;
+		width: 100%;
 		&:not(:first-child) {
 			margin-left: 30px;
 		}
@@ -49,9 +52,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 120px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+
   border-radius: 4%;
   background-color: #F5F4FA;
   &:last-child{
@@ -61,10 +62,13 @@
     margin-right: 0;
   }
   @media screen and (min-width: 768px) {
-		width: 354px;
+		width: 100%;
 	}
 	@media screen and (min-width: 1200px) {
-		width: 270px;
+		width: 100%;
+      height: 100%;
+  margin-right: 30px;
+  margin-bottom: 30px;
 	}
 }
 
@@ -91,12 +95,6 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--article-color);
-
-  @media screen and (min-width: 768px) {
-	}
-
-	@media screen and (min-width: 1200px) {
-	}
 }
 
 
