--- a/sass/layout/_portfolio-table.scss
+++ b/sass/layout/_portfolio-table.scss
@@ -1,9 +1,11 @@
 .portfolio {
+  @media screen and (min-width: 1200px) {
   display: flex;
   flex-wrap: wrap;
+  }
 
     @media screen and (max-width: 767px) {
-    justify-content: center;
+    
     }
 
     @media screen and (min-width: 768px) and (max-width:1199px) {
@@ -24,7 +26,7 @@
   }
   
   @media screen and (max-width: 767px) {
-  margin: auto;
+
   margin-bottom: 30px;
   &:last-child {
     margin-bottom: 0;
@@ -34,7 +36,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: calc(100% / 2 - 30px);
+  width: calc(100% / 2 - 15px);
     &:not(:nth-child(2n)) {
   margin-right: 30px;
   }
@@ -46,7 +48,21 @@
 }
 
 .portfolio__box {
-  display: inline-block;
+    @media screen and (max-width: 767px){
+    display: block;
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
+    &:hover .portfolio__tumb ,
+    &:focus-within .portfolio__tumb {
+    box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.12), 
+    0px 4px 4px rgba(0, 0, 0, 0.06), 
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+    transform: translateY(0);
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    display: inline-block;
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: var(--timing-function);
@@ -57,6 +73,10 @@
     1px 4px 6px rgba(0, 0, 0, 0.16);
     transform: translateY(0);
     }
+  }
+
+
+  
 }
 
 .portfolio__wrap{
@@ -73,7 +93,7 @@
   letter-spacing: 0.03em;
   color: var(--main-title-color);
   background-color: rgba(33, 150, 243, 0.9);
-  width: 370px;
+  width: 100%;
   height: 294px;
   padding: 63px 24px;
   top: 0;
