--- a/sass/layout/_regular-clients.scss
+++ b/sass/layout/_regular-clients.scss
@@ -213,12 +213,13 @@
 }
 
 .clients__item{
-    display: flex;
+  height: 93px;
+  /*display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-around;*/
   width: calc(100% / 2 - 15px);
-    border: 1px solid #AFB1B8;
-  border-radius: 4%;
+  /*  border: 1px solid #AFB1B8;
+  border-radius: 4%;*/
   margin-bottom: 30px;
     &:nth-child(5n) {
       margin-bottom: 0px;
@@ -231,7 +232,11 @@
 .clients__link{
 	display: flex;
 	justify-content: center;
-	height: 92px;
+  align-items: center;
+	height: 100%;
+  width: 100%;
+  border: 1px solid #AFB1B8;
+  border-radius: 4%;
 
     &:hover .clients__icon,
     &:focus .clients__icon{
