--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -5,22 +5,9 @@
 }
 
 .team {
-  padding-left: 15px;
-	padding-right: 15px;
+
 	margin-right: auto;
 	margin-left: auto;
-  @media screen and (max-width: 767px) {
-		width: auto;
-    
-	}
-
-	@media screen and (min-width: 768px) {
-		width: auto;
-	}
-
-	@media screen and (min-width: 1200px) {
-		width: 1200px;
-	}
 }
 
 .section__title--team {
@@ -51,12 +38,17 @@
 		display: flex;
 		justify-content: center;
 		flex-wrap: wrap;
-		margin: -15px;
+		margin: 15px;
+      &:first-child {
+        margin-bottom: 60px;
+      }
     }
 }
 
 .team__img {
-  width: 100%;
+  max-width: 100%;
+  display: block;
+  height: auto;
 }
 
 .team__item {
@@ -65,21 +57,12 @@
   background-color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
   0px 2px 2px rgba(0, 0, 0, 0.12);
-  margin: 15px;
-    @media screen and (max-width: 767px) {
-		&:not(:last-child) {
-			margin-bottom: 30px;
-		}
-	}
+  
+
 
 	@media screen and (max-width: 767px) {
-		margin-left: 15px;
-    margin-right: 15px;
     margin-bottom: 30px;
     margin-top: 0;
-    &:last-child {
-      margin-bottom: 0px;
-    }
 	}
 
 	@media screen and (min-width: 768px) {
@@ -89,16 +72,12 @@
     margin-right: 15px;
     margin-bottom: 30px;
     margin-top: 0;
-    &:nth-child(3n) {
-      margin-bottom: 0px;
-    }
-    &:nth-child(4n) {
-      margin-bottom: 0px;
-    }
+
 	}
 	@media screen and (min-width: 1200px) {
 		width: 270px;
 		height: 428px;
+    margin: 15px;
 	}
 }
 
