--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -21,6 +21,12 @@ body {
   background-color: #ffffff;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .current{
   color: #2196f3;
 }
