--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,13 +1,4 @@
-.section-features{
-  @media screen and (max-width: 767px) {
-  padding-bottom: 60px;
-  padding-top: 60px;
-  }
-  
-  @media screen and (min-width: 1200px) {
-  height: auto;
-  }
-}
+
 
 .features {
   display: flex;
@@ -38,10 +29,24 @@
 		}
 	}
 	@media screen and (min-width: 768px) and (max-width: 1199px) {
-    flex-basis: ((100% - 60px) / 2);
+    flex-basis: calc((100% - 60px) / 2);
+    margin-right: 30px;
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-child(4n) {
+      margin-right: 0;
+    }
+    margin-bottom: 30px;
+    &:nth-child(3n) {
+      margin-bottom: 0;
+    }
+    &:nth-child(4n) {
+      margin-bottom: 0;
+    }
 	}
 	@media screen and (min-width: 1200px) {
-		width: 100%;
+		width: 270px;
 		&:not(:first-child) {
 			margin-left: 30px;
 		}
@@ -52,9 +57,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  height: 120px;
   border-radius: 4%;
   background-color: #F5F4FA;
+  margin-bottom: 30px;
   &:last-child{
     margin-right: 0px;
     }
@@ -65,10 +71,7 @@
 		width: 100%;
 	}
 	@media screen and (min-width: 1200px) {
-		width: 100%;
-      height: 100%;
-  margin-right: 30px;
-  margin-bottom: 30px;
+		margin-bottom: 30px;
 	}
 }
 
