--- a/sass/layout/_portfolio-navigation.scss
+++ b/sass/layout/_portfolio-navigation.scss
@@ -6,7 +6,7 @@
     @media screen and (max-width: 767px) {
 		flex-wrap: wrap;
 		justify-content: flex-start;
-		margin-top: -15px;
+		margin-bottom: 40px;
 	}
 
 	@media screen and (min-width: 768px) {
@@ -18,12 +18,22 @@
 	}
 }
 
+
+
 .navigation__item{
-  margin-right: 8px;
-    &:last-child{
-    margin-right: 0;
-    }
+	margin-right: 8px;
+    	&:last-child{
+    	margin-right: 0;
+    	}
     @media screen and (max-width: 767px) {
-		margin-top: 15px;
+		margin-top: 0;
+		margin-bottom: 10px;
+		&:nth-child(4n) {
+			margin-bottom: 0;
+		}
+		&:nth-child(5n) {
+			margin-bottom: 0;
+		}
 	}
 }
+
