--- a/sass/layout/_portfolio-table.scss
+++ b/sass/layout/_portfolio-table.scss
@@ -1,7 +1,8 @@
 .portfolio {
-  @media screen and (min-width: 1200px) {
-  display: flex;
+    display: flex;
   flex-wrap: wrap;
+  @media screen and (min-width: 1200px) {
+
   }
 
     @media screen and (max-width: 767px) {
@@ -12,8 +13,10 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+      margin: -15px;
       }
 }
+
 
 .portfolio__item {
   @media screen and (min-width: 1200px) {
@@ -33,7 +36,7 @@
   }
   }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-  display: flex;
+  /*display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: calc(100% / 2 - 15px);
@@ -42,7 +45,10 @@
   }
   &:not(:nth-last-child(-n + 2)) {
   margin-bottom: 30px;
-  }
+  }*/
+
+  flex-basis: calc((100% - 60px) / 2);
+  margin: 15px;
   
 }
 }
@@ -94,7 +100,7 @@
   color: var(--main-title-color);
   background-color: rgba(33, 150, 243, 0.9);
   width: 100%;
-  height: 294px;
+  height: 100%;
   padding: 63px 24px;
   top: 0;
   left: 0;
@@ -110,9 +116,18 @@
 }
 
 .portfolio__description {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   padding: 20px 24px 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
+}
+
+.tablet-version {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-bottom: 56px;
+  }
 }
 
 .portfolio__title {
